--- a/.dprint.jsonc
+++ b/.dprint.jsonc
@@ -13,7 +13,9 @@
 		"commands": [
 			{
 				"command": "bunx sort-package-json --stdin",
-				"fileNames": ["package.json"],
+				"fileNames": [
+					"package.json",
+				],
 				"stdin": true,
 			},
 		],
@@ -22,6 +24,7 @@
 		"**/node_modules",
 		"**/bun.lock",
 		"**/out",
+		"**/bun",
 	],
 	"plugins": [
 		"https://plugins.dprint.dev/typescript-0.95.13.wasm",
