--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "bun build.ts",
-    "demo:out:noshebang": "bun ./out/index-no-shebang.js",
-    "demo:out:shebang": "bun ./out/index-shebang.js",
-    "demo:source:noshebang": "bun ./src/index-no-shebang.ts",
-    "demo:source:shebang": "bun ./src/index-shebang.ts",
+    "demo:out:noshebang": "bun ./out/no-shebang.js",
+    "demo:out:shebang": "bun ./out/shebang.js",
+    "demo:source:noshebang": "bun ./src/no-shebang.ts",
+    "demo:source:shebang": "bun ./src/shebang.ts",
     "fmt": "bunx dprint fmt"
   },
   "devDependencies": {
