refactor: move build to preload, add debug bun support
- Use bunfig.toml preload to run build.ts before tests
- Set BUN_DEBUG_QUIET_LOGS=1 to suppress debug bun syscall traces
- Make tests concurrent for faster execution
- Add test script to package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "bun build.ts",
-    "fmt": "bunx dprint fmt"
+    "fmt": "bunx dprint fmt",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "latest"
